
2006-10-12 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Add an option to create direct mail and fetch URL in one step

2006-10-11 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* parse_url(): suppress warnings and check results

2006-10-09 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Added fields scheduled, scheduled_begin, scheduled_end to TCA as type "none" (format "datetime")
	* Implement issue #4214: change form encoding of module to multipart/form-data
	* Fix bug #4297: broken SQL in getListOfRecipentCategories() when the table has no MM-table
	* Add hooks to modify the module menu and the menu of the "direct mail" mode
	* Add hook handle new commands of the "direct mail" mode

2006-10-05 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fixed path to jsfunc.evalfield.js in BE module

2006-08-8 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.1.5
	* Correction: display of some statistics was erroneous. Thanks to David Bocher.
	* Two new constants in the Direct Mail Plain Text static template: doubleLF and removeSplitChar.
	* Partial fix for bugtracker issue 3207: Recipient list from Website User Group and users with multiple user groups. Will work at least with MySQL.

2006-07-14 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Chapter "Personalizing direct mail content" extended in manual.sxw

2006-06-21 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction: missing character set conversion of mail subject when mail character set is different from the backend charset
	* Mail subject would be encoded multiple times. Thanks to David Bocher.

2006-06-12 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete file pi1/locallang.php
	* Add Spanish labels in pi1/locallang.xml
	* Replace br tag by linefeed (instead of space) in plain text rendering plugin.

2006-05-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update version number to 2.1.3