@@ -1,4 +1,7 @@
 
+2006-10-17 Martin Kutschker <martin.t.kutschker@blackbox.net>
+	* Added field renderedsize to TCA as type "none" (format "filesize")
+
 2006-10-12 Martin Kutschker <martin.t.kutschker@blackbox.net>
 	* Add an option to create direct mail and fetch URL in one step
 
